Fixed scrolling on ios

--- a/src/style.css
+++ b/src/style.css
@@ -2,6 +2,15 @@ html {
     background-color: lightgray;
 }
 
+*::-webkit-scrollbar {
+    width: 8px;
+    height: 8px;
+    background-color: transparent;
+}
+*::-webkit-scrollbar-thumb {
+    background-color: black;
+}
+
 body {
     font-family: system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
     max-width: 1200px;
@@ -58,10 +67,7 @@ pre {
     filter: drop-shadow(0px 0px 5px grey);
     border-radius: 10px;
     padding: 20px;
-}
-
-code {
-    white-space: break-spaces;
+    overflow-x: auto;
 }
 
 p > code {
